--- a/Nettside/Gruppetimer.html
+++ b/Nettside/Gruppetimer.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Gruppetimer</h1>
+    <h1>GRUPPETIMER</h1>
     <article id="tabeller">
         <div>
             <table>
