--- a/Nettside/Hjem.html
+++ b/Nettside/Hjem.html
@@ -2,54 +2,44 @@
 <html lang="en">
 
 <head>
-        
     <meta charset="UTF-8">
-        
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Nettside om trening</title>
-        
+    <title>Nettside om trening</title>
     <link rel="stylesheet" href="nettside.css">
 </head>
 
 <body>
-        <header>
-                <h1>IT-train</h1>
-                <ul id="hjem">
-                        <li>
-                                <a href="">Hjem</a></li>
-                        <li>
-                                <a href="kontakt.html">Kontakt oss</a>
-                            </li>
-                        <li>
-                                <a href="">Treningsøvelser</a>
-                            </li>
-                        <li>
-                                <a href="">Medlemsskap</a>
-                            </li>
-                        <li>
-                                <a href="">Gruppetimer</a>
-                            </li>
-                        <li>
-                                <a href=""></a>
-                            </li>
-                    </ul>
-            </header>
+    <header>
+        <h1>T R A I N - I T</h1>
+        <ul id="hjem">
+            <li>
+                <a href="">Hjem</a></li>
+            <li>
+                <a href="kontakt.html">Kontakt oss</a>
+            </li>
+            <li>
+                <a href="treningsøvelser/trening.html">Treningsøvelser</a>
+            </li>
+            <li>
+                <a href="medlemskap.html">Medlemsskap</a>
+            </li>
+            <li>
+                <a href="gruppetimer.html">Gruppetimer</a>
+            </li>
+            <li>
+                <a href=""></a>
+            </li>
+        </ul>
+    </header>
 </body>
 
 <body>
-        <div>
-                <img src="3D.jpg" alt="3D">
-                <img src="treningssenter.jpg" alt="treningssenter">
-                <img src="yoga.jpeg" alt="yoga">
-            </div>
+    <video class="start-video" autoplay="" loop="" playsinline="" muted="">
+		<source src="https://www.actic.se/app/uploads/2016/11/ACTICWEBLOOP5.webm" type="video/webm">
+		<source src="https://www.actic.se/app/uploads/2016/11/ACTICWEBLOOP5.mp4" type="video/mp4">
+		</video>
 </body>
 
-<body>
-        <div>
-                <img src="gif.gif" alt="gif">
-            </div>
-</body>
 
 </html>
