--- a/Nettside/medlemskap.html
+++ b/Nettside/medlemskap.html
@@ -34,7 +34,7 @@
 
 
         <div id="alder">
-            Din alder
+            Din fødselsdato
             <br>
             <input type="text" name="socialSecurityNumber" placeholder="DDMMÅÅÅÅ" data-min-chars="8" class="required find-member">
         </div>
